# FastRLE

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.txt  fast_rle.cpp  fast_rle_exe.cpp  install.sh  setup.py
benchmarks/: benchmarks.py
fast_rle/: processing.py
src/fast_rle/: csv_utils.cpp  csv_utils.h  csv_writer.hpp  decode_utils.cpp  decode_utils.h  encode_utils.cpp  encode_utils.h  log_latency.cpp  log_latency.h  masks_utils.cpp  masks_utils.h  rle_file.cpp  rle_file.h  save_utils.cpp  save_utils.h  shared_utils.cpp  shared_utils.h  to_parts.h
src/python_stuff/: about.h  converters.cpp  converters.h  decoding_wrapper.cpp  decoding_wrapper.hpp  encoding_wrapper.cpp  encoding_wrapper.hpp  gil_lock.hpp  load_masks_wrapper.cpp  load_masks_wrapper.hpp  python_utils.cpp  python_utils.h  reading_wrapper.cpp  reading_wrapper.hpp  rle_file_wrapper.cpp  rle_file_wrapper.h  saving_wrapper.cpp  saving_wrapper.hpp
